antlr4_data/AntraxParser.py
# Generated from antlr4_data/Antrax.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AntraxParser ( Parser ):

    grammarFileName = "Antrax.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Program'", "'antrax'", "'{'", "'}'", 
                     "';'", "'if'", "'('", "')'", "'else'", "'try'", "'catch'", 
                     "'while'", "'for'", "'print'", "'='", "'Fx:'", "','", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'return'", "'+'", "'-'", "'*'", "'/'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "FID", "NUM", "STRING", 
                      "TYPE", "RETURN", "PLUS", "MINUS", "MULT", "DIV", 
                      "LT", "GT", "LEQ", "GEQ", "EQ", "NEQ", "WS", "COMMENT" ]

    RULE_root = 0
    RULE_stat = 1
    RULE_ifStat = 2
    RULE_tryStat = 3
    RULE_tryAction = 4
    RULE_catchAction = 5
    RULE_ifAction = 6
    RULE_elseAction = 7
    RULE_whileStat = 8
    RULE_forStat = 9
    RULE_printStat = 10
    RULE_varDecl = 11
    RULE_varAsg = 12
    RULE_funcStat = 13
    RULE_params = 14
    RULE_param = 15
    RULE_retStat = 16
    RULE_funcCall = 17
    RULE_expr = 18
    RULE_exprBool = 19
    RULE_exprAdd = 20
    RULE_exprMul = 21
    RULE_exprAtom = 22

    ruleNames =  [ "root", "stat", "ifStat", "tryStat", "tryAction", "catchAction", 
                   "ifAction", "elseAction", "whileStat", "forStat", "printStat", 
                   "varDecl", "varAsg", "funcStat", "params", "param", "retStat", 
                   "funcCall", "expr", "exprBool", "exprAdd", "exprMul", 
                   "exprAtom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    ID=18
    FID=19
    NUM=20
    STRING=21
    TYPE=22
    RETURN=23
    PLUS=24
    MINUS=25
    MULT=26
    DIV=27
    LT=28
    GT=29
    LEQ=30
    GEQ=31
    EQ=32
    NEQ=33
    WS=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def EOF(self):
            return self.getToken(AntraxParser.EOF, 0)

        def getRuleIndex(self):
            return AntraxParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = AntraxParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(AntraxParser.T__0)
            self.state = 47
            self.match(AntraxParser.T__1)
            self.state = 48
            self.match(AntraxParser.T__2)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.stat()
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

            self.state = 54
            self.match(AntraxParser.T__3)
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 55
                self.match(AntraxParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(AntraxParser.VarDeclContext,0)


        def varAsg(self):
            return self.getTypedRuleContext(AntraxParser.VarAsgContext,0)


        def ifStat(self):
            return self.getTypedRuleContext(AntraxParser.IfStatContext,0)


        def whileStat(self):
            return self.getTypedRuleContext(AntraxParser.WhileStatContext,0)


        def forStat(self):
            return self.getTypedRuleContext(AntraxParser.ForStatContext,0)


        def printStat(self):
            return self.getTypedRuleContext(AntraxParser.PrintStatContext,0)


        def retStat(self):
            return self.getTypedRuleContext(AntraxParser.RetStatContext,0)


        def funcStat(self):
            return self.getTypedRuleContext(AntraxParser.FuncStatContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(AntraxParser.FuncCallContext,0)


        def tryStat(self):
            return self.getTypedRuleContext(AntraxParser.TryStatContext,0)


        def getRuleIndex(self):
            return AntraxParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = AntraxParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AntraxParser.TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.varDecl()
                self.state = 59
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.varAsg()
                self.state = 62
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.ifStat()
                self.state = 65
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.T__11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.whileStat()
                self.state = 68
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.T__12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.forStat()
                self.state = 71
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.T__13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.printStat()
                self.state = 74
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.RETURN]:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.retStat()
                self.state = 77
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.T__15]:
                self.enterOuterAlt(localctx, 8)
                self.state = 79
                self.funcStat()
                self.state = 80
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.FID]:
                self.enterOuterAlt(localctx, 9)
                self.state = 82
                self.funcCall()
                self.state = 83
                self.match(AntraxParser.T__4)
                pass
            elif token in [AntraxParser.T__9]:
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                self.tryStat()
                self.state = 86
                self.match(AntraxParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AntraxParser.ExprContext,0)


        def ifAction(self):
            return self.getTypedRuleContext(AntraxParser.IfActionContext,0)


        def elseAction(self):
            return self.getTypedRuleContext(AntraxParser.ElseActionContext,0)


        def getRuleIndex(self):
            return AntraxParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = AntraxParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(AntraxParser.T__5)
            self.state = 91
            self.match(AntraxParser.T__6)
            self.state = 92
            self.expr()
            self.state = 93
            self.match(AntraxParser.T__7)
            self.state = 94
            self.match(AntraxParser.T__2)
            self.state = 95
            self.ifAction()
            self.state = 96
            self.match(AntraxParser.T__3)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AntraxParser.T__8:
                self.state = 97
                self.match(AntraxParser.T__8)
                self.state = 98
                self.match(AntraxParser.T__2)
                self.state = 99
                self.elseAction()
                self.state = 100
                self.match(AntraxParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TryStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tryAction(self):
            return self.getTypedRuleContext(AntraxParser.TryActionContext,0)


        def ID(self):
            return self.getToken(AntraxParser.ID, 0)

        def catchAction(self):
            return self.getTypedRuleContext(AntraxParser.CatchActionContext,0)


        def getRuleIndex(self):
            return AntraxParser.RULE_tryStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTryStat" ):
                listener.enterTryStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTryStat" ):
                listener.exitTryStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTryStat" ):
                return visitor.visitTryStat(self)
            else:
                return visitor.visitChildren(self)




    def tryStat(self):

        localctx = AntraxParser.TryStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tryStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(AntraxParser.T__9)
            self.state = 105
            self.match(AntraxParser.T__2)
            self.state = 106
            self.tryAction()
            self.state = 107
            self.match(AntraxParser.T__3)
            self.state = 108
            self.match(AntraxParser.T__10)
            self.state = 109
            self.match(AntraxParser.ID)
            self.state = 110
            self.match(AntraxParser.T__2)
            self.state = 111
            self.catchAction()
            self.state = 112
            self.match(AntraxParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TryActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def getRuleIndex(self):
            return AntraxParser.RULE_tryAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTryAction" ):
                listener.enterTryAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTryAction" ):
                listener.exitTryAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTryAction" ):
                return visitor.visitTryAction(self)
            else:
                return visitor.visitChildren(self)




    def tryAction(self):

        localctx = AntraxParser.TryActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tryAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.stat()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CatchActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def getRuleIndex(self):
            return AntraxParser.RULE_catchAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCatchAction" ):
                listener.enterCatchAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCatchAction" ):
                listener.exitCatchAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCatchAction" ):
                return visitor.visitCatchAction(self)
            else:
                return visitor.visitChildren(self)




    def catchAction(self):

        localctx = AntraxParser.CatchActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_catchAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.stat()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def getRuleIndex(self):
            return AntraxParser.RULE_ifAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfAction" ):
                listener.enterIfAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfAction" ):
                listener.exitIfAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfAction" ):
                return visitor.visitIfAction(self)
            else:
                return visitor.visitChildren(self)




    def ifAction(self):

        localctx = AntraxParser.IfActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.stat()
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def getRuleIndex(self):
            return AntraxParser.RULE_elseAction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseAction" ):
                listener.enterElseAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseAction" ):
                listener.exitElseAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseAction" ):
                return visitor.visitElseAction(self)
            else:
                return visitor.visitChildren(self)




    def elseAction(self):

        localctx = AntraxParser.ElseActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.stat()
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AntraxParser.ExprContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def getRuleIndex(self):
            return AntraxParser.RULE_whileStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)




    def whileStat(self):

        localctx = AntraxParser.WhileStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(AntraxParser.T__11)
            self.state = 135
            self.match(AntraxParser.T__6)
            self.state = 136
            self.expr()
            self.state = 137
            self.match(AntraxParser.T__7)
            self.state = 138
            self.match(AntraxParser.T__2)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.stat()
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

            self.state = 144
            self.match(AntraxParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(AntraxParser.VarDeclContext,0)


        def expr(self):
            return self.getTypedRuleContext(AntraxParser.ExprContext,0)


        def varAsg(self):
            return self.getTypedRuleContext(AntraxParser.VarAsgContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntraxParser.StatContext)
            else:
                return self.getTypedRuleContext(AntraxParser.StatContext,i)


        def getRuleIndex(self):
            return AntraxParser.RULE_forStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStat" ):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)




    def forStat(self):

        localctx = AntraxParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(AntraxParser.T__12)
            self.state = 147
            self.match(AntraxParser.T__6)
            self.state = 148
            self.varDecl()
            self.state = 149
            self.match(AntraxParser.T__4)
            self.state = 150
            self.expr()
            self.state = 151
            self.match(AntraxParser.T__4)
            self.state = 152
            self.varAsg()
            self.state = 153
            self.match(AntraxParser.T__7)
            self.state = 154
            self.match(AntraxParser.T__2)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 155
                self.stat()
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AntraxParser.T__5) | (1 << AntraxParser.T__9) | (1 << AntraxParser.T__11) | (1 << AntraxParser.T__12) | (1 << AntraxParser.T__13) | (1 << AntraxParser.T__15) | (1 << AntraxParser.ID) | (1 << AntraxParser.FID) | (1 << AntraxParser.TYPE) | (1 << AntraxParser.RETURN))) != 0)):
                    break

            self.state = 160
            self.match(AntraxParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AntraxParser.ExprContext,0)


        def STRING(self):
            return self.getToken(AntraxParser.STRING, 0)

        def getRuleIndex(self):
            return AntraxParser.RULE_printStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStat" ):
                listener.enterPrintStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStat" ):
                listener.exitPrintStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStat" ):
                return visitor.visitPrintStat(self)
            else:
                return visitor.visitChildren(self)




    def printStat(self):

        localctx = AntraxParser.PrintStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_printStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(AntraxParser.T__13)
            self.state = 163
            self.match(AntraxParser.T__6)
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 164
                self.expr()
                pass

            elif la_ == 2:
                self.state = 165
                self.match(AntraxParser.STRING)
                pass


            self.state = 168
            self.match(AntraxParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(AntraxParser.TYPE, 0)

        def ID(self):
            return self.getToken(AntraxParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AntraxParser.ExprContext,0)


        def getRuleIndex(self):
            return AntraxParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = AntraxParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(AntraxParser.TYPE)
            self.state = 171
            self.match(AntraxParser.ID)
            self.state = 172
            self.match(AntraxParser.T__14)
            self.state = 173
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarAsgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AntraxParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AntraxParser.ExprContext,0)


        def getRuleIndex(self):
            return AntraxParser.RULE_varAsg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarAsg" ):
                listener.enterVarAsg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarAsg" ):
                listener.exitVarAsg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarAsg" ):
                return visitor.visitVarAsg(self)
            else:
                return visitor.visitChildren(self)




    def varAsg(self):
